// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`autentizuj uživatele neúspěšně 1`] = `
Array [
  Object {
    "__v": 0,
    "email": "tumas@topol.io",
    "loginAttempts": 1,
    "password": "===password===",
    "sentEmails": Array [],
    "username": "tomáš",
  },
]
`;

exports[`autentizuj uživatele neúspěšně až se zamkne 1`] = `
Array [
  Object {
    "__v": 0,
    "email": "tumas@topol.io",
    "loginAttempts": 6,
    "password": "===password===",
    "sentEmails": Array [],
    "username": "tomáš",
  },
]
`;

exports[`autentizuj uživatele úspěšně 1`] = `
Array [
  Object {
    "__v": 0,
    "email": "tumas@topol.io",
    "loginAttempts": 0,
    "password": "===password===",
    "sentEmails": Array [],
    "username": "tomáš",
  },
]
`;

exports[`autentizuj zamknutého uživatele neúspěšně 1`] = `
Array [
  Object {
    "__v": 0,
    "email": "tumas@topol.io",
    "loginAttempts": 1,
    "password": "===password===",
    "sentEmails": Array [],
    "username": "tomáš",
  },
]
`;

exports[`autentizuj zamknutého uživatele úspěšně 1`] = `
Array [
  Object {
    "__v": 0,
    "email": "tumas@topol.io",
    "loginAttempts": 0,
    "password": "===password===",
    "sentEmails": Array [],
    "username": "tomáš",
  },
]
`;

exports[`vytvoř a změň uživatele 1`] = `
Array [
  Object {
    "__v": 0,
    "email": "tumas@topol.io",
    "loginAttempts": 0,
    "password": "===password===",
    "sentEmails": Array [],
    "username": "tomáš",
  },
]
`;

exports[`vytvoř a změň uživatele 2`] = `
Array [
  Object {
    "__v": 0,
    "email": "tumas@topol.io",
    "loginAttempts": 0,
    "password": "===password===",
    "sentEmails": Array [],
    "username": "tom",
  },
]
`;

exports[`vytvoř uživatele 1`] = `
Array [
  Object {
    "__v": 0,
    "email": "tumas@topol.io",
    "loginAttempts": 0,
    "password": "===password===",
    "sentEmails": Array [],
    "username": "tomáš",
  },
]
`;

exports[`vytvoř uživatele s prázdným heslem 1`] = `[ValidationError: User validation failed: password: Path \`password\` is required.]`;
